fix truncate works with japanese

--- a/src/public/stylus/pages/post.styl
+++ b/src/public/stylus/pages/post.styl
@@ -54,6 +54,7 @@
 
     img
       max-width: 100%
+      width: 100%
 
     ul, ol
       padding: 5px 20px
